# phoenix

./: .clang-format  .contract-version  .cursorrules  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .qmllint.ini  .yamllint.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRASH_ANALYSIS_READY.md  FIXUP_SPRINT_PLAN_REVIEW.md  FIXUP_SPRINT_PLAN_V2_REVIEW.md  FIXUP_SPRINT_PLAN_V3_REVIEW.md  FIXUP_SPRINT_PLAN_V4_FINAL_REVIEW.md  ICON_SYSTEM_REVIEW_README.md  LICENSE-THIRD-PARTY.md  LLDB_CRASH_CAPTURE.md  Makefile  PHOENIX_PHASE2E_CHECKPOINT.md  PHOENIX_SPRINT4.4_CHUNK4_PROTO_DISCOVERY.md  PHOENIX_SPRINT4.4_CHUNK5_PROTO_PLAN.md  PHOENIX_SPRINT4.4_CHUNK7_DEPENDABOT_PLAN.md  PHOENIX_SPRINT4.4_CONTROL_DOCUMENT_AUDIT.md  PHOENIX_SPRINT4.4_WP0_VALIDATION.md  PHOENIX_UI_SCREENSHOT.md  PULL_REQUEST_TEMPLATE.md  README.md  REPORT_PREFLIGHT_BUG_FIX.md  SPRINT4.5_CODE_REVIEW_RESPONSE.md  SPRINT_4.2_CHUNK_3A_LOCALSOCKET_TRANSPORT_PLAN.md  SPRINT_4.2_CHUNK_3C_ECHO_TRANSPORT_TEST_PLAN.md  SPRINT_4.2_CHUNK_4A_XY_SINE_INTEGRATION_PLAN.md  SPRINT_4.2_CHUNK_4B_FIX_PLAN.md  (+34 more)
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.underlord/: AI_OPERATIONS_GUIDE.md  CHANGELOG.md  INFRASTRUCTURE_BRIEFING.md  METRICS.md  OPERATIONS.md  REPOSITORY_ARCHITECTURE.md  SPRINT_002_DEPLOYMENT_METRICS.md  config.json  config.yml  last-preflight.txt  preflight.sh  sprint-close.sh  sprint-init.sh  sprint-status.sh  startup.sh
chunk4c/: CHUNK_4G_SUMMARY.md  DIAGNOSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md
ci/: check_translations.sh  i18n_smoke.sh
ci-audit-package/: .codespellignore  .lycheeignore  AUDIT_README.md  README.md
cmake/: ToolchainCcache.cmake  policy_no_deprecated.cmake
docs/: AI_OPERATIONS_GUIDE.md  CI_DEV01_RUNNER.md  CI_WORKFLOW_SYSTEM.md  CODING_STANDARDS.md  CODING_STANDARDS_CPP_QT.md  DEV01_REMOVAL_AUDIT.md  DEV01_REMOVAL_SUMMARY.md  DEVELOPMENT.md  DEVELOPMENT_WORKFLOW.md  HOW_TO_UPDATE_MACOS_DOCK_ICON.md  ICON_SELECTION.md  KNOWN_TEST_FAILURES.md  LICENSING.md  MAC_DEVELOPMENT_ENVIRONMENT.md  MAC_ENVIRONMENT_DOCUMENTATION.md  PREFLIGHT_PROFILE_S4.3.md  SETUP_MAC_DEV_ENV.md  SPRINT4.4_CAPABILITIES_IPC.md  SPRINT_HYGIENE.md  SPRINT_SUMMARY_2025-01-21.md  SPRINT_TASKS.md  TECHNICAL_DEBT.md  UNDERLORD_BRANCH_PROTECTION.md  UNDERLORD_DAILY_CHECKLIST.md  UNDERLORD_MAC_ACCESS.md  UNDERLORD_MAC_ENVIRONMENT.md  VERSIONS.md  _finalize_check.md  _noninteractive_verification.md  ci-acceptance-test.md  ci-test.md  dev-setup.md  feature-manager.md  icon-storage-strategy.md  icons.md  mac_dock_icon.md  sprint4.1-closure-summary.md  sprint4.1-final-summary.md  sprint4.1-release-notes.md  sprint4.1-retrospective.md  (+3 more)
docs/sprint4/: ADR-20251017-transport-choice.md  BUGS_AND_THE_UNEXPECTED.md  CMakeLists.txt  CONTROL_REV_5.3.md  GATE_0_5_DECISION.md  PHASE_0_5_COMPLETE.md  PHASE_1_COMPLETION_PLAN.md  PHASE_1_TESTING_CHECKLIST.md  STOP_THE_LINE_2025-10-17.md  STOP_THE_LINE_qt_graphs_missing.md  gate0_5_qtcharts_headless.cpp  gate0_5_qtcharts_test.cpp  gate0_5_transport_test.cpp  phoenix-sprint4-control-rev5.1.md  preflight_dev01.md  project_notes.md
docs/sprint4/legacy/: ADR-20251017-transport-choice.md  gate0_5_qtcharts.csv  gate0_5_qtcharts_summary.md  gate0_5_transport_decision.md  phoenix-sprint4-control-rev5.1.md  preflight_dev01.md
docs/sprint4/results/: gate0_5_qtcharts.csv  gate0_5_qtcharts_summary.md  gate0_5_qtgraphs_6_10.csv  gate0_5_qtgraphs_6_10_summary.md  gate0_5_transport_decision.md  p1_checklist.md  p2_checklist.md
experiments/: README.md
proto/: bedrock_echo.proto  palantir.proto
qa_reports_20251125_151630/: OVERNIGHT_SUMMARY.md
qa_reports_20251125_153553/: OVERNIGHT_SUMMARY.md
qa_reports_20251125_153627/: OVERNIGHT_SUMMARY.md
qa_reports_20251125_154116/: OVERNIGHT_SUMMARY.md
qa_reports_20251125_160521/: OVERNIGHT_SUMMARY.md
qa_reports_20251125_161830/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_152618/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153247/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153513/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153543/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153557/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153609/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153629/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153643/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153659/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153712/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_153945/: OVERNIGHT_SUMMARY.md
qa_reports_20251126_155313/: OVERNIGHT_SUMMARY.md
qml/: Icon.qml  IconProvider.qml
screenshots/: view_screenshot.html
scripts/: auto-merge.sh  capture-ui-debug.sh  capture_phoenix_ui.py  capture_ui_screenshot.py  comprehensive_ui_test.py  connect_to_mac.sh  create_mac_icon.py  dev01-preflight.sh  discover_mac_environment.sh  doc-review.sh  generate_macos_icon.sh  gui-smoke-test.sh  open_screenshot.py  pre_commit_test.sh  qt_screenshot.cpp  qt_screenshot_cmake.txt  serve_screenshot.py  setup-fontawesome-pro.sh  show_screenshot_info.py  simple_ui_capture.py  test_ui.py  validate_qml.sh  validate_ui_components.py
src/: main.cpp  (+5 more)
tests/: CMakeLists.txt  analysis_sanity_tests.cpp  canonical_json_tests.cpp  echo_dialog_tests.cpp  envelope_helpers_test.cpp  feature_parameter_panel_tests.cpp  feature_registry_tests.cpp  graphs_perf_sanity.cpp  libsodium_ed25519_sanity.cpp  license_manager_tests.cpp  license_verification_tests.cpp  test_analysis_cancel.cpp  test_analysis_progress.cpp  test_analysis_runmode_settings.cpp  test_analysis_timeout.cpp  test_analysis_window_creation.cpp  test_analysis_window_manager.cpp  test_analysiswindow_autorun.cpp  test_async_architecture.cpp  test_local_xysine.cpp  test_preferences_runmode_ui.cpp  test_xy_plot_instrumentation.cpp  test_xyplot_autoscale.cpp  test_xysine_transport.cpp  transport_sanity_tests.cpp
tests/helpers/: BedrockProcessHelper.cpp  BedrockProcessHelper.hpp
tests/transport/: ErrorMapping_test.cpp
tests/vega/: VegaLiteLocalizer_test.cpp
(+2539 files in other folders)
